// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-tooltip> Component Basic usage 1`] = `
<bolt-tooltip trigger-type="text"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              content="Tooltip content."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Direction of the tooltip bubble: down 1`] = `
<bolt-tooltip trigger-type="button"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              position-vert="down"
              content="Tooltip content."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Direction of the tooltip bubble: medium 1`] = `
<bolt-tooltip trigger-type="text"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              spacing="medium"
              content="Tooltip content."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Direction of the tooltip bubble: none 1`] = `
<bolt-tooltip trigger-type="text"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              spacing="none"
              content="Tooltip content."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Direction of the tooltip bubble: small 1`] = `
<bolt-tooltip trigger-type="text"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              spacing="small"
              content="Tooltip content."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Direction of the tooltip bubble: up 1`] = `
<bolt-tooltip trigger-type="button"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              position-vert="up"
              content="Tooltip content."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Direction of the tooltip bubble: xsmall 1`] = `
<bolt-tooltip trigger-type="text"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              spacing="xsmall"
              content="Tooltip content."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component No wrapping for tooltip content: false 1`] = `
<bolt-tooltip trigger-type="text"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              content="Tooltip content. This text should wrap if noWrap is set to false, otherwise it should not wrap."
>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component No wrapping for tooltip content: true 1`] = `
<bolt-tooltip trigger-type="text"
              trigger-text="Trigger text"
              trigger-icon-name="info-open"
              no-wrap
              content="Tooltip content. This text should wrap if noWrap is set to false, otherwise it should not wrap."
>
</bolt-tooltip>
`;
